# sdl3-gamepad-to-evdev

./: CHANGELOG.md  Cargo.toml  README.md  sc2.md  sc2_ds4.toml  sc2_ds4_extra_buttons.toml  sc2_to_ds4+extra.toml  sc2_to_ds4.toml  sc2_to_xbox_360+extra.toml  sc2_to_xbox_360.toml  sc2_to_xbox_one_elite+paddles+extra.toml  sc2_to_xbox_one_elite+paddles.toml  sc2_to_xbox_series_xs+extra.toml  sc2_to_xbox_series_xs.toml  sc2_xbox.toml  sc2_xbox_extra_buttons.toml  sc2_xbox_like.toml  sc2_xbox_stricter.toml
.github/workflows/: manual_release.yml
src/: button_tracker.rs  calibration.rs  config.rs  event_loop.rs  event_processing.rs  lib.rs  main.rs  parsed_config.rs  simulated.rs  simulated_gyro.rs
tests/: parse_configs.rs
