[package]
name = "sdl3toevdev"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl3 = { version = "0.18.4", features = ["build-from-source-static", "hidapi"] }
sdl3-sys = { version = "0.6.6", features = ["build-from-source-static"] }
evdev = { version = "0.13.2", features = [] }
anyhow = "1"
toml = "1.1.2"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.29", features = [] }


[profile.release]
debug = true
codegen-units = 1
